--- a/Frontend/src/assets/styles/pages/_Chat.scss
+++ b/Frontend/src/assets/styles/pages/_Chat.scss
@@ -258,6 +258,10 @@
           }
         }
       }
+
+      &:last-child {
+        display: none;
+      }
     }
   }
 }
